--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
             </table>
             <div class="button-container">
                 <button id="addRowButton">Adding New Rows</button>
+                <button id="delete-row-button">Delete Row</button>
                 <button class = "adding-new-rows" type="submit">Submit</button>
                 <!-- Add the button with an id for easy access in JavaScript -->
               </div>
