--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                <!-- Add the submit button -->
             </div>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src = "app.js"></script>
        </div>
        
